# clip-cues

./: .gitignore  .pre-commit-config.yaml  LICENSE  PUBLICATION_CHECKLIST.md  README.md  TESTING.md  TESTING_SUMMARY.md  pyproject.toml  test_fresh_install.sh  test_package_distribution.py  test_readme.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
config/: train.yaml
config/experiment/: clip_orthogonal.yaml  concept_model.yaml
data/checkpoints/: README.md  clip_orthogonal_cnnspot.ckpt  clip_orthogonal_combined.ckpt  clip_orthogonal_synthbuster.ckpt  clip_orthogonal_synthclic.ckpt  cm_antonyms_cnnspot.ckpt  cm_antonyms_combined.ckpt  cm_antonyms_synthbuster.ckpt  cm_antonyms_synthclic.ckpt  linear_probe_cnnspot.ckpt  linear_probe_combined.ckpt  linear_probe_synthbuster.ckpt  (+1 more)
examples/: inference_demo.py
notebooks/: clip_orthogonal_inference.ipynb  concept_classifier_inference.ipynb  generative_prompts.ipynb  inspect_synthbuster_plus.ipynb  inspect_synthclic.ipynb  linear_model_inference.ipynb
results/: COMPARISON_SUMMARY.md  VERIFICATION_COMPLETE.md  synthclic_clip_orthogonal_synthclic.json  synthclic_clip_orthogonal_synthclic_metrics.csv  synthclic_clip_orthogonal_synthclic_predictions.csv  synthclic_clip_orthogonal_synthclic_predictions.npz  synthclic_linear_probe_combined.json  synthclic_linear_probe_combined_metrics.csv  synthclic_linear_probe_combined_predictions.csv  synthclic_linear_probe_combined_predictions.npz
scripts/: README.md  README_EMBEDDINGS.md  TRAINING_GUIDE.md  VALIDATION_COMPARISON.md  compare_archive_results.py  create_text_embeddings.py  download_dataset.py  example_validate.sh  export_checkpoints.py  extract_clip_embeddings.py  extract_clip_projected_embeddings.py  train_concept_model_synthclic.sh  validate_model.py  verify_implementation.py
(+15 files in other folders)
